name:                hnagiosplugin
version:             0.1.0.0
synopsis:            Write Nagios plugins
description:         Implements Nagios plugin development guidelines
                     within a Haskell framework for writing Nagios
                     checks.
homepage:            https://github.com/fractalcat/hnagiosplugin
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2014 Sharif Olorin
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Nagios.Plugin
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      lib
  default-language:    Haskell2010
